# Wind_Turbine_App

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
examples/HAWC2/DTU10MW/control/: additional_control_parameters.txt  cp_table.txt  min_ct_table.txt
examples/HAWC2/DTU10MW/htc/: DTU_10MW_RWT.htc  DTU_10MW_RWT_minCt_derate.htc  DTU_10MW_RWT_short.htc  dtu10mw_advanced.htc  dtu10mw_with_actuators.htc
src/dtu_we_controller/: CMakeLists.txt  dtu_we_controller.f90  dtu_we_controller_fcns.f90  file_info.h  floating_controller.f90  turbine_controller.f90
src/dtu_we_controller_bladed/: CMakeLists.txt  dtu_we_controller_bladed.f90  file_info.h
src/flap_controller_cyclic/: CMakeLists.txt  file_info.h  flap_controller_cyclic.f90  flap_controller_cyclic_fcns.f90
src/flap_controller_individual_aep_u_f/: CMakeLists.txt  file_info.h  flap_controller_individual_aep_u_f.f90
src/individual_pitch_controller/: CMakeLists.txt  cyclic_pitch_controller.f90  cyclic_pitch_controller_fcns.f90  file_info.h
src/modules/: CMakeLists.txt  global_constants.f90  global_variables.f90  misc_mod.f90  user_defined_types.f90
tests/test_32/: set_avx2.bat  test_controller.py
tests/test_32/test_files/: dtu_10mw_rwt_short.sel
tests/test_64/: DTU10MW_control_settings.py  DTUControllerDLL.py  test_controller.py
tests/test_64/test_files/: test_python_interface.npz
